--- a/games/drift-boss/index.html
+++ b/games/drift-boss/index.html
@@ -25,7 +25,16 @@
 
     <main class="game-container">
         <div class="game-wrapper">
-           
+            <iframe 
+                src="https://html5.gamedistribution.com/0a8b51e5eaee42e7b4db83ca00afc92e/?gd_sdk_referrer_url=https://www.example.com/games/drift-boss" 
+                width="1280" 
+                height="720" 
+                scrolling="no" 
+                frameborder="0" 
+                allowfullscreen 
+                title="Drift Boss Game"
+                class="game-iframe">
+            </iframe>
         </div>
 
         <section class="game-info">
